components/navbar/navbar.module.css
.container {
  width: auto;
  height: 72px;
  padding: 0px 130px;

  display: flex;
  justify-content: space-between;
  align-items: center;

  background-color: var(--primary-1);
}

.menuButton {
  display: none;
}

.buttonsContainer {
  height: 48px;
  display: flex;
  gap: 32px;
}

.skeletonButton {
  padding: 0px;
}

.buttonsContainer > div {
  display: flex;
  gap: 16px;
}

@media only screen and (max-width: 1200px) {
  .container {
    padding: 0px 80 px;
  }
}

@media only screen and (max-width: 648px) {
  .container {
    padding: 0px 60px;
  }

  .buttonsContainer {
    display: none;
  }

  .menuButton {
    display: block;
  }
}

